--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gecko-docs",
+  "name": "portafolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,11 +15,12 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/base": "^5.0.0-beta.70",
     "@mui/icons-material": "^6.4.8",
-    "@mui/material": "^6.4.8",
+    "@mui/material": "^6.4.10",
     "@mui/x-data-grid": "^7.28.1",
     "@mui/x-tree-view": "^7.28.1",
     "@toolpad/core": "^0.13.0",
     "@types/react-router-dom": "^5.3.3",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0"
